@@ -19,6 +19,9 @@ while modif:
     (expr, m) = rewrite.flattenAssoc(expression.Product, expr)
     modif = modif or m
     
+    (expr, m) = rewrite.flattenAssoc(expression.And, expr)
+    modif = modif or m
+    
     (expr, modif) = rewrite.promoteSelect(expr)
     modif = modif or m
     
